# serializer version: 1
# name: test_fallback_store_switches_to_polars_components[inmemory-duckdb-md5]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      'all_local',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': 'a0c201d1a1d544ffb280b77f5eba6370',
        }),
        dict({
          'default': 'f040041d473979cf6b09e52b5fd30507',
        }),
        dict({
          'default': 'd298fdb1b67f63faf57475ec9873beb8',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      'with_fallback',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': 'a0c201d1a1d544ffb280b77f5eba6370',
        }),
        dict({
          'default': 'f040041d473979cf6b09e52b5fd30507',
        }),
        dict({
          'default': 'd298fdb1b67f63faf57475ec9873beb8',
        }),
      ]),
    }),
  })
# ---
# name: test_fallback_store_switches_to_polars_components[inmemory-duckdb-xxhash32]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      'all_local',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': '621878453',
        }),
        dict({
          'default': '517716338',
        }),
        dict({
          'default': '1041616769',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      'with_fallback',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': '621878453',
        }),
        dict({
          'default': '517716338',
        }),
        dict({
          'default': '1041616769',
        }),
      ]),
    }),
  })
# ---
# name: test_fallback_store_switches_to_polars_components[inmemory-duckdb-xxhash64]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      'all_local',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': '10287390557157909633',
        }),
        dict({
          'default': '9105599929563734189',
        }),
        dict({
          'default': '5530377118348852693',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      'with_fallback',
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': '10287390557157909633',
        }),
        dict({
          'default': '9105599929563734189',
        }),
        dict({
          'default': '5530377118348852693',
        }),
      ]),
    }),
  })
# ---
# name: test_fallback_store_warning_issued[inmemory-duckdb-md5]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      False,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': 'a0c201d1a1d544ffb280b77f5eba6370',
        }),
        dict({
          'default': 'f040041d473979cf6b09e52b5fd30507',
        }),
        dict({
          'default': 'd298fdb1b67f63faf57475ec9873beb8',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      True,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': 'a0c201d1a1d544ffb280b77f5eba6370',
        }),
        dict({
          'default': 'f040041d473979cf6b09e52b5fd30507',
        }),
        dict({
          'default': 'd298fdb1b67f63faf57475ec9873beb8',
        }),
      ]),
    }),
  })
# ---
# name: test_fallback_store_warning_issued[inmemory-duckdb-xxhash32]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      False,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': '621878453',
        }),
        dict({
          'default': '517716338',
        }),
        dict({
          'default': '1041616769',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      True,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': '621878453',
        }),
        dict({
          'default': '517716338',
        }),
        dict({
          'default': '1041616769',
        }),
      ]),
    }),
  })
# ---
# name: test_fallback_store_warning_issued[inmemory-duckdb-xxhash64]
  dict({
    tuple(
      'duckdb',
      'inmemory',
      False,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': '10287390557157909633',
        }),
        dict({
          'default': '9105599929563734189',
        }),
        dict({
          'default': '5530377118348852693',
        }),
      ]),
    }),
    tuple(
      'duckdb',
      'inmemory',
      True,
    ): dict({
      'added': 3,
      'changed': 0,
      'removed': 0,
      'versions': list([
        dict({
          'default': '10287390557157909633',
        }),
        dict({
          'default': '9105599929563734189',
        }),
        dict({
          'default': '5530377118348852693',
        }),
      ]),
    }),
  })
# ---
